# av-sim-arena

./: .gitignore  .mcp.json  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: maintenance.yml
av_sim_arena/: __init__.py
av_sim_arena/connectors/: __init__.py  base.py  carla_connector.py  sumo_connector.py
av_sim_arena/leaderboard/: __init__.py  api.py  database.py
av_sim_arena/metrics/: __init__.py  safety.py
av_sim_arena/planners/: __init__.py  base.py  lattice.py  mpc.py  rl_planner.py  rrt_star.py
av_sim_arena/scenarios/: __init__.py  generator.py  models.py
av_sim_arena/traffic/: __init__.py  behavior_tree.py  npc.py
av_sim_arena/visualization/: __init__.py  plots.py  replay.py
benchmarks/: emergency_stop.yaml  highway_merge.yaml  intersection.yaml  parking.yaml  roundabout.yaml
results/: example_results.json
tests/: test_benchmarks.py  test_connectors.py  test_leaderboard.py  test_leaderboard_api.py  test_metrics.py  test_planners.py  test_scenarios.py  test_traffic.py  test_visualization.py
